--- a/calculadora.html
+++ b/calculadora.html
@@ -351,16 +351,54 @@
                   Ingrese una función y haga clic en "Calc." para obtener su
                   derivada (especificando los repectivos operadores). Ej.:
                   <br /><br />
-                  "3*x^2" ⟶ "6 * x"
-                  <br />
-                  "sqrt(x^2)" ⟶ "x / sqrt(x^2)"
-                  <br />
-                  "sin(x)+3*x" ⟶ "cos(x) + 3"
-                  <br />
-                  "e^(2*x)" ⟶ "2 * e^(2 * x)"
-                  <br />
-                  "ln(x^2)" ⟶ "2 / x"
-                  <br /><br />
+                  <div class="mb-3">
+                    <span class="px-2 border border-2 border-dark fw-semibold"
+                      >fórmula</span
+                    >
+                    ⟶
+                    <span class="px-2 border border-2 border-dark fw-semibold"
+                      >derivada</span
+                    >
+                  </div>
+                  <div class="mb-3">
+                    <span class="px-2 border border-2 border-black">3*x^2</span>
+                    ⟶
+                    <span class="px-2 border border-2 border-black">6 * x</span>
+                  </div>
+                  <div class="mb-3">
+                    <span class="px-2 border border-2 border-black"
+                      >sqrt(x^2)</span
+                    >
+                    ⟶
+                    <span class="px-2 border border-2 border-black"
+                      >x / sqrt(x^2)</span
+                    >
+                  </div>
+                  <div class="mb-3">
+                    <span class="px-2 border border-2 border-black"
+                      >sin(x)+3*x</span
+                    >
+                    ⟶
+                    <span class="px-2 border border-2 border-black"
+                      >cos(x) + 3</span
+                    >
+                  </div>
+                  <div class="mb-3">
+                    <span class="px-2 border border-2 border-black"
+                      >e^(2*x)</span
+                    >
+                    ⟶
+                    <span class="px-2 border border-2 border-black"
+                      >2 * e^(2 * x)</span
+                    >
+                  </div>
+                  <div class="mb-4">
+                    <span class="px-2 border border-2 border-black"
+                      >ln(x^2)</span
+                    >
+                    ⟶
+                    <span class="px-2 border border-2 border-black">2 / x</span>
+                  </div>
                   Funciones soportadas: ln, sqrt(√), sin, cos, tan, cot, sec,
                   csc
                 </div>
