--- a/derivadas-constante.html
+++ b/derivadas-constante.html
@@ -161,7 +161,8 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="derivadas-potencia.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short" ></i></a>
+  <a href="intro-derivadas.html" class="float-btn float-prev d-flex align-items-center justify-content-center" title="Tema anterior"><i class="bi bi-arrow-left-short" ></i></a>
+  <a href="derivadas-potencia.html" class="float-btn float-next d-flex align-items-center justify-content-center" title="Tema siguiente"><i class="bi bi-arrow-right-short" ></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
