--- a/derivadas-potencia.html
+++ b/derivadas-potencia.html
@@ -195,7 +195,8 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="derivadas-funcionlineal.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
+  <a href="derivadas-constante.html" class="float-btn float-prev d-flex align-items-center justify-content-center" title="Tema anterior"><i class="bi bi-arrow-left-short" ></i></a>
+  <a href="derivadas-funcionlineal.html" class="float-btn float-next d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
