--- a/derivadas-trigonometricas.html
+++ b/derivadas-trigonometricas.html
@@ -175,7 +175,8 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="derivadas-parciales.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short""></i></a>
+  <a href="derivadas-logaritmicas.html" class="float-btn float-prev d-flex align-items-center justify-content-center" title="Tema anterior"><i class="bi bi-arrow-left-short" ></i></a>
+  <a href="derivadas-parciales.html" class="float-btn float-next d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short""></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
