--- a/intro-derivadas.html
+++ b/intro-derivadas.html
@@ -204,7 +204,7 @@
   <!-- End Footer -->
 
   <div id="preloader"></div>
-  <a href="derivadas-constante.html" class="back-to-top d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
+  <a href="derivadas-constante.html" class="float-btn float-next d-flex align-items-center justify-content-center" title="Siguiente tema"><i class="bi bi-arrow-right-short"></i></a>
 
   <!-- Vendor JS Files -->
   <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
