--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
           <li><a href="index.html">Inicio</a></li>
           <li><a class="active" href="about.html">Nosotros</a></li>
           <li><a href="courses.html">Temas</a></li>
-          <li><a href="test.html">Tests</a></li>
+          <li><a href="tests.html">Tests</a></li>
           <li><a href="calculadora.html">Calculadora</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
