--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a class="active" href="index.html">Inicio</a></li>
           <li><a href="about.html">Nosotros</a></li>
           <li><a href="courses.html">Temas</a></li>
-          <li><a href="test.html">Tests</a></li>
+          <li><a href="tests.html">Tests</a></li>
           <li><a href="calculadora.html">Calculadora</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
