--- a/tests.html
+++ b/tests.html
@@ -1,21 +1,15 @@
 <!DOCTYPE html>
 <html lang="es">
   <head>
-    <meta charset="utf-8">
-    <meta content="width=device-width, initial-scale=1.0" name="viewport">
-  
-    <title>Aprende Derivadas - Inicio</title>
-    <meta content="" name="description">
-    <meta content="" name="keywords">
-  
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Test - Aprende Derivadas</title>
     <!-- Favicons -->
-    <link href="assets/img/favicon.png" rel="icon">
+    <link href="assets/img/favicon.ico" rel="icon">
     <link href="assets/img/apple-touch-icon.png" rel="apple-touch-icon">
-  
+
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Raleway:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
-  
-    <!-- Vendor CSS Files -->
+    <!-- Stylesheet -->
     <link href="assets/vendor/animate.css/animate.min.css" rel="stylesheet">
     <link href="assets/vendor/aos/aos.css" rel="stylesheet">
     <link href="assets/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -23,108 +17,102 @@
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link href="assets/vendor/remixicon/remixicon.css" rel="stylesheet">
     <link href="assets/vendor/swiper/swiper-bundle.min.css" rel="stylesheet">
-  
-    <!-- Template Main CSS File -->
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="assets/css/tests.css" rel="stylesheet">
-  
     
+    <link rel="stylesheet" href="assets/css/test.css" />
+
+    <link rel="manifest" href="/assets/json/manifest.json">
+
   </head>
   <body>
-    <header id="header" class="fixed-top">
-      <div class="container d-flex align-items-center">
-  
-        <h1 class="logo me-auto"><a href="index.html">Aprende Derivadas</a></h1>
-        <!-- Uncomment below if you prefer to use an image logo -->
-        <!-- <a href="index.html" class="logo me-auto"><img src="assets/img/logo.png" alt="" class="img-fluid"></a>-->
-  
-        <nav id="navbar" class="navbar order-last order-lg-0">
-          <ul>
-            <li><a href="index.html">Inicio</a></li>
-            <li><a href="about.html">Nosotros</a></li>
-            <li><a href="courses.html">Temas</a></li>
-            <li><a href="tests.html" class="active">Tests</a></li>
-          </ul>
-          <i class="bi bi-list mobile-nav-toggle"></i>
-        </nav><!-- .navbar -->
-      </div>
-    </header>
-    <div class="tests">
-      <h5>Pon a prueba tus conocimientos</h5>
-      <div class="start-screen">
-        <button id="start-button">Iniciar</button>
-      </div>
-      <div id="display-container">
-        <div class="header">
-          <div class="number-of-count">
-            <span class="number-of-question">1 de 6 preguntas</span>
-          </div>
-          <div class="timer-div">
-            <img src="assets/img/timer-icon.svg" />
-            <span class="time-left">15s</span>
-          </div>
-        </div>
-        <div id="container">
-          <!-- questions and options will be displayed here -->
-        </div>
-        <button id="next-button">Siguiente</button>
-      </div>
-      <div class="score-container hide">
-        <div id="user-score">Puntaje</div>
-        <button id="restart">Reiniciar</button>
-      </div>
-    </div>
-    <footer id="footer">
+    <main>
+      <div class="container test-container">
+        <div class="row d-flex justify-content-center">
+          <div class="card col-md-8 test-card">
+            <div class="card-body d-flex flex-column">
+              <h2 class="card-title my-4 text-center">Test de Aprende Derivadas</h2>
+              <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="assets/img/test/nivel-1.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Introducción a las derivadas</h5>
+                      <p class="card-text">Prueba rápida acerca de los concetos fundamentales  de las derivadas.</p>
+                      <a href="test-1.html" class="btn btn-outline-primary">Hacer test</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Derivadas de una constante</h5>
+                      <p class="card-text">La resolución de derivadas parte desde lo más básico.</p>
+                      <a href="test-2.html" class="btn btn-outline-primary">Hacer test</a>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <img src="assets/img/test/nivel-2.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="assets/img/test/nivel-3.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Derivadas de una función lineal</h5>
+                      <p class="card-text">Desafía tus conocimientos en un nivel más avanzado</p>
+                      <a href="test-3.html" class="btn btn-outline-primary">Hacer test</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Derivadas parciales</h5>
+                      <p class="card-text">Eres todo un maestro, estás preparado para el siguiente nivel.</p>
+                      <a href="test-4.html" class="btn btn-outline-primary">Hacer test</a>
+                    </div>
+                  </div>
+                  <div class="col-md-4">
+                    <img src="assets/img/test/nivel-4.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                </div>
+              </div>
+              <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                  <div class="col-md-4">
+                    <img src="assets/img/test/nivel-5.png" class="img-fluid rounded-start" alt="...">
+                  </div>
+                  <div class="col-md-8">
+                    <div class="card-body">
+                      <h5 class="card-title">Derivadas de una raíz</h5>
+                      <p class="card-text">Desafía tu razonamiento y selecciona la respuesta en el orden correcto</p>
+                      <a href="test-5.html" class="btn btn-outline-primary">Hacer test</a>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <a href="index.html" class="btn btn-primary mt-4">Volver al sitio principal</a>
 
-      <div class="footer-top">
-        <div class="container">
-          <div class="row">
-  
-            <div class="col-lg-3 col-md-6 footer-contact">
-              <h3>Aprende derivadas</h3>
-              <p>
-                Apure<br>
-                Calle Bolívar, a una cuadra de la plaza Bolívar, San Fernando<br>
-                Venezuela <br>
-              </p>
-            </div>
-  
-            <div class="col-lg-2 col-md-6 footer-links">
-              <h4>Enlaces</h4>
-              <ul>
-                <li><i class="bx bx-chevron-right"></i> <a href="./index.html">Inicio</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="./about.html">Nosotros</a></li>
-                <li><i class="bx bx-chevron-right"></i> <a href="./courses.html">Temas</a></li>
-              </ul>
             </div>
           </div>
         </div>
       </div>
-  
-      <div class="container d-md-flex py-4">
-  
-        <div class="me-md-auto text-center text-md-start">
-          <div class="copyright">
-            &copy; <strong><span>Aprender Derivadas</span></strong>. Todos los derechos reservados
-          </div>
-        </div>
-      </div>
-    </footer><!-- End Footer -->
-  
-    <div id="preloader"></div>
-    <a href="#" class="back-to-top d-flex align-items-center justify-content-center"><i class="bi bi-arrow-up-short"></i></a>
-  
+    </main>
     <!-- Vendor JS Files -->
     <script src="assets/vendor/purecounter/purecounter_vanilla.js"></script>
     <script src="assets/vendor/aos/aos.js"></script>
     <script src="assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
     <script src="assets/vendor/swiper/swiper-bundle.min.js"></script>
     <script src="assets/vendor/php-email-form/validate.js"></script>
-  
-    <!-- Template Main JS File -->
-    <script src="assets/js/main.js"></script>
-    <script src="assets/js/tests.js"></script>
-  
+    <!-- Script -->
   </body>
-  
-  </html>
+</html>
